--- a/game.html
+++ b/game.html
@@ -10,8 +10,24 @@
         </style>
     </head>
     <body>
-        <div id = "hero">
+        <div id = "hero">  
 
         </div>
+
+        <script>
+            var hero = new object();
+            hero.element = "hero";
+            hero.x = 250;
+            hero.y =450;
+
+            function setPosition(sprite){
+                var e  = document.getElementById(sprite.element);
+                e.style.left = sprite.x + "px";
+                e.style.top = sprite.y + "px";
+
+            }
+            setPosition(hero);
+        </script>
+      
     </body>
 </html>
