--- a/game.html
+++ b/game.html
@@ -15,6 +15,11 @@
   <div id="hero"></div>
   <script>
 
+    var LEFT_KEY =37;
+    var UP_KEY =38;
+    var RIGHT_KEY =39;
+    var DOWN_KEY =40;
+
     var hero = new Object();
     hero.element = 'hero';
     hero.x = 250;
