--- a/game.html
+++ b/game.html
@@ -19,6 +19,8 @@
     var UP_KEY =38;
     var RIGHT_KEY =39;
     var DOWN_KEY =40;
+    var HERO_MOVEMENT =1;
+    var lastLoopRun =0;
 
     var hero = new Object();
     hero.element = 'hero';
@@ -28,12 +30,42 @@
     var controller = new Object();
 
     function toggleKey(keyCode, isPressed){
-      console.log(keyCode);
+      if(keyCode==LEFT_KEY)
+        controller.left=isPressed;
+      if(keyCode==UP_KEY)
+        controller.up=isPressed;
+      if(keyCode==RIGHT_KEY)
+        controller.right=isPressed;
+      if(keyCode==DOWN_KEY)
+        controller.down=isPressed;
+    }
+
+    function handleControl(){
+      if(controller.up )
+        hero.y-=HERO_MOVEMENT;
+      if(controller.down)
+        hero.y+=HERO_MOVEMENT;
+      if(controller.left)
+        hero.x-=HERO_MOVEMENT;
+      if(controller.right)
+        hero.x+=HERO_MOVEMENT;
     }
     function setPosition(sprite) {
       var e = document.getElementById(sprite.element);
       e.style.left = sprite.x + 'px';
       e.style.top = sprite.y + 'px';
+    }
+
+
+    function showSprite(){
+      setPosition(hero)
+    }
+    function loop(){
+      if(new Date().getTime() - lastLoopRun > 40 ){
+        handleControl();
+        showSprite();
+      }
+      setTimeout('loop()', 2);
     }
 
     document.onkeydown =function(evt){
@@ -44,7 +76,7 @@
       toggleKey(evt.keyCode,false);
     };
 
-    setPosition(hero);
+    loop();
 
   </script>
 </body>
