--- a/game.html
+++ b/game.html
@@ -16,6 +16,12 @@
       left: 0px;
       top: 0px;
     }
+    #laser{
+      background: green;
+      width: 2px;
+      height: 50px;
+      position: absolute;
+    }
   </style>
 </head>
 
