--- a/game.html
+++ b/game.html
@@ -1,48 +1,6 @@
 <html>
 <head>
-<style>
-#hero {
-  background: #ff0000;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-}
-#background {
-  background: #000000;
-  width: 500px;
-  height: 500px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-#laser {
-  background: #00ff00;
-  width: 2px;
-  height: 50px;
-  position: absolute;
-}
-.enemy {
-  background: #0000ff;
-  width: 35px;
-  height: 35px;
-  position: absolute;
-}
-#score{
-  color:black;
-  font-size: 18pt;
-  position:absolute;
-  left: 10px;
-  top: 510px;
-}
-#gameOver{
-  color: red;
-  font-size: 20px;
-  position: absolute;
-  left: 160px;
-  top: 200px;
-  visibility: hidden;
-}
-</style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="background"></div>
