add a reload functionality

--- a/game.html
+++ b/game.html
@@ -8,6 +8,9 @@
   <div id="laser"></div>
   <div id ="score"></div>
   <div id ="gameOver">Game Over</div>
+  <div id ="reload">
+    <a href = "javascript: reloadGame();">Reload the game</a>
+  </div>
   <script src="game.js"></script>
 
 
