--- a/game.html
+++ b/game.html
@@ -9,7 +9,10 @@
   <div id ="score"></div>
   <div id ="gameOver">Game Over</div>
   <div id ="reload">
-    <a href = "javascript: reloadGame();">Reload the game</a>
+    <a href = "javascript: reloadGame();">RELOAD</a>
+  </div>
+  <div id ="pause">
+      <a href = "javascript: pause();">PAUSE</a>
   </div>
   <script src="game.js"></script>
 
