add the title intro

--- a/game.html
+++ b/game.html
@@ -3,6 +3,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id ="title">Welcome to the shooting game!</div>
+  <div id ="intro">
+    <p>SPACE key to shoot and ARROW keys to control your hero</br>
+    Try to score higher! Good luck!</p>
+  </div>
   <div id="background"></div>
   <div id="hero"></div>
   <div id="laser"></div>
