--- a/app/game.html
+++ b/app/game.html
@@ -6,7 +6,7 @@
   <div id ="title">Welcome to the shooting game!</div>
   <div id ="intro">
     <p>SPACE key to shoot and ARROW keys to control your hero</br>
-    Try to score higher! Good luck!</p>
+    Hit P to pause and R to reload Try to score higher! </p>
   </div>
   <div id="background"></div>
   <div id="hero"></div>
