--- a/app/game.html
+++ b/app/game.html
@@ -5,7 +5,7 @@
 <body>
   <div id ="title">Welcome to the shooting game!</div>
   <div id ="intro">
-    <p>SPACE key to shoot and ARROW keys to control your hero</br>
+    <p>ARROW keys to control your hero and SPACE key to shoot </br>
     Try to score higher! </p>
   </div>
   <div id="background"></div>
